--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "emotion-theming": "9.2.9",
     "file-loader": "^3.0.1",
     "focus-visible": "^5.0.2",
+    "fork-ts-checker-webpack-plugin": "^1.5.1",
     "fuse.js": "^3.4.6",
     "gettext-parser": "1.3.1",
     "grid-emotion": "^2.1.0",
@@ -166,6 +167,7 @@
     "fsevents": "^2.1.2"
   },
   "resolutions": {
+    "@types/react": "^16.7.0",
     "caniuse-lite": ">=1.0.30000989",
     "browserslist": ">=4.7.0",
     "set-value": "^2.0.1",
